<resources>
    <string name="app_name">辅诚汽车</string>
    <string name="one_title">30天无理由退车</string>
    <string name="one_message">提车30天内，可以享受30天无理由退车， 消除您的一切顾虑</string>
    <string name="two_title">全国联保国家3包</string>
    <string name="two_message">消费者可依法享受国家《汽车三包规定》内的“3包”权益</string>
    <string name="three_title">出厂标准期内新车</string>
    <string name="three_message">国内正规厂家生产、经检验合格的国产或者进口车辆</string>
    <string name="four_title">一键拨号电话咨询</string>
    <string name="four_message">400-808-2229</string>
    <string name="fucheng_message">\t\t辅诚控股集团是专注于拓展汽车销售、汽车金融、汽车融资租赁、
        汽车物流及仓储等四大业务板块，推行现代企业制度和管理模式，铸就社会信赖、和谐共享的卓越企业。
　　集团先后与奔驰、宝马、别克、大众展开合作，并与多家汽车品牌形成战略合作关系。销售品牌主要包括：
        丰田、本田、别克、大众、奥迪、捷豹、奔驰、宝马、玛莎拉蒂、保时捷等中高端车辆，并为客户提供专业详尽的商品信息咨询，
        以及贴心周到的售后服务。公司拥有专业资深的销售服务人员，一流的服务体系，向广大用户提供全方位、高品质的多功能服务。
　　辅诚控股集团与汽车金融公司、银行等主流金融机构合作，集合了数十家金融机构的数百种金融产品，确保每款新车都有丰富
        的车贷方案可供选择，并为经销商和用户提供展车贷、提车贷、库存贷、一证贷、极速贷、低息贷、融资租赁、
        以租代购等多元化金融产品和服务。</string>
    <string name="message1">\t\t目前辅诚控股集团已与多家物流企业合作，国内物流网点已覆盖华南、华东、华中、
        华北地区重点城市，并在多地设有物流仓储基地。在汽车进口服务领域，集团始终以更加优质、高效的汽车进口服务
        为目标，持续提升软硬件相结合的汽车进口服务能力体系，具备车辆报关、报检、仓储、物流、新车检测及
        车辆整备在内的全链条服务能力。
      \n\t\t辅诚控股集团从线下经销体系转型为线上线下相结合的经销商连锁模式，凭借着其以客户为中心的发展模式，
        全力打造优秀汽车经销商和服务品牌，以“创新、服务、诚信、进取、合作”的企业精神和“以人为本，客户至上
        ，诚信立业，以诚兴企”的经营理念，培育全新的汽车经销体系，并引入先进的连锁经营业态，致力于在全国推行“佰城佰店计划”。
      \n\t\t集团在创造客户价值的同时，还将致力于为我们的合作伙伴与员工提供可持续发展平台，以满足个体自我价值的实现。</string>
</resources>
